fix: adjust browse grade column on mobile

--- a/react-ui/src/components/Browse/Browse.css
+++ b/react-ui/src/components/Browse/Browse.css
@@ -89,6 +89,7 @@ th {
 .mobileTableHeader {
   font-weight: bold;
   display: inline-block;
+  justify-content: center;
 }
 
 .mobileTable {
